--- a/public/assets/mobirise/css/mbr-additional.css
+++ b/public/assets/mobirise/css/mbr-additional.css
@@ -1091,45 +1091,117 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rRF3umTBWU {
+.cid-qTkA127IK8 {
+  background-image: url("../../../assets/images/background4.jpg");
+}
+.cid-rRF176nNHj {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #efefef;
+  background-color: #ffffff;
 }
-.cid-rRF3umTBWU .card-box {
-  padding: 0 2rem;
+.cid-rRF176nNHj .mbr-slider .carousel-control {
+  background: #1b1b1b;
 }
-.cid-rRF3umTBWU .mbr-section-btn {
-  padding-top: 1rem;
+.cid-rRF176nNHj .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
 }
-.cid-rRF3umTBWU .mbr-section-btn a {
-  margin-top: 1rem;
-  margin-bottom: 0;
+.cid-rRF176nNHj .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
 }
-.cid-rRF3umTBWU h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 2rem;
+.cid-rRF176nNHj .mbr-slider .modal-body .close {
+  background: #1b1b1b;
 }
-.cid-rRF3umTBWU p {
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 1.5rem;
+.cid-rRF176nNHj .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
 }
-.cid-rRF3umTBWU .mbr-text {
+.cid-rRF176nNHj .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rRF176nNHj .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-rRF176nNHj .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rRF176nNHj .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rRF18vYb9Z {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rRF18vYb9Z .counter-container {
   color: #767676;
 }
-.cid-rRF3umTBWU .card-wrapper {
-  height: 100%;
-  padding-bottom: 2rem;
-  background: #ffffff;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
+.cid-rRF18vYb9Z .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
 }
-.cid-rRF3umTBWU .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
+.cid-rRF18vYb9Z .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-rRF18vYb9Z .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-rRF18vYb9Z .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.cid-rRF19x19Q9 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rRF19x19Q9 .mbr-text {
+  color: #767676;
+}
+.cid-rRF19x19Q9 .mbr-text p {
+  background: #ffffff;
 }
 .cid-qTkAaeaxX5 {
   padding-top: 60px;
